--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,24 +1,32 @@
 cmake_minimum_required(VERSION 3.20)
-project(Fractals VERSION 1.0)
+project(fractals VERSION 1.0)
 
 # Generate complie commands
 set(CMAKE_EXPORT_COMPILE_COMMANDS ON)
 
 # Specifying the C++ standard
-set(CMAKE_CXX_STANDARD 11)
+set(CMAKE_CXX_STANDARD 17)
 set(CMAKE_CXX_STANDARD_REQUIRED True)
 
-# Include directories
-include_directories(include)
+option(USE_VENDORED "Use vendored libraries" ON)
+
+if (USE_VENDORED) 
+  add_subdirectory(vendored/glfw EXCLUDE_FROM_ALL)
+  add_subdirectory(vendored/glm EXCLUDE_FROM_ALL)
+else()
+  find_package(glfw3 REQUIRED)
+  find_package(glm REQUIRED)
+endif()
+
 
 # Find OpenGL Package
 find_package(OpenGL REQUIRED)
 
-# Find GLFW Package
-find_package(glfw3 REQUIRED)
-
-# Find glm Package
-find_package(glm REQUIRED)
+include_directories(
+  include
+  ${OpenGL_INCLUDE_DIRS}
+  ${glfw3_INCLUDE_DIRS}
+)
 
 # Get all header files
 set(HEADER_FILES
@@ -32,11 +40,6 @@ set(SOURCE_FILES
 )
 
 # Add the source files
-include_directories(
-  ${OpenGL_INCLUDE_DIRS}
-  ${glfw3_INCLUDE_DIRS}
-)
-
 add_executable(${PROJECT_NAME}
   ${SOURCE_FILES}
   ${HEADER_FILES}
